trying to fix fucking horizontal scrolling

--- a/main.scss
+++ b/main.scss
@@ -14,6 +14,7 @@ body {
   background-repeat: no-repeat;
   // width: 100vw;
   // overflow: hidden;
+  overflow-x: hidden;
 }
 .app-body {
   max-width: 520px;
